Fixed missing color.

--- a/_sass/component/_tags.scss
+++ b/_sass/component/_tags.scss
@@ -53,7 +53,7 @@
     .post-date {
       display: inline-block;
       font-size: 80%;
-      color: $post-date-color;
+      color: $lightgrey;
       margin: 0;
       padding: 0;
     }
